--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -1,218 +1,211 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/modal.css" />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="icomoon/style.css" />
-    <title>STARTNET</title>
-  </head>
 
-  <body>
-    <header class="top-header">
-      <div>
-        <a href="#menu">
-          <img class="logo" src="./assets/logo-menu.png" alt="startnet"
-        /></a>
-      </div>
-      <nav class="top-nav">
-        <ul>
-          <li><a href="#menu">Home</a></li>
-          <li><a href="#menu">Planos</a></li>
-          <li><a href="#menu">A Empresa</a></li>
-          <li><a href="#menu">Central do Assinante</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section class="top-content">
-      <div class="banner">
-        <h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
-      </div>
-    </section>
-    <section id="middle-content">
-      <div class="maxwidth">
-        <h2 class="titles">Escolha o melhor plano para você</h2>
-        <div class="line"></div>
-        <article class="col-1_4">
-          <div class="box">
-            <span class="number">20</span>
-            <span class="mega">mega</span>
-            <span class="p-wifi">Wi-fi grátis</span>
-            <span class="price">
-              <p>R$49,90</p>
-            </span>
-            <button class="button-sign">Assine já</button>
-          </div>
-        </article>
-        <article class="col-1_4">
-          <div class="box">
-            <span class="number">60</span>
-            <span class="mega">mega</span>
-            <span class="p-wifi">Wi-fi grátis</span>
-            <span class="price">
-              <p>R$69,90</p>
-            </span>
-            <button class="button-sign">Assine já</button>
-          </div>
-        </article>
-        <article class="col-1_4">
-          <div class="box-middle">
-            <span class="number">100</span>
-            <span class="mega">mega</span>
-            <span class="p-wifi">Wi-fi grátis</span>
-            <span class="price">
-              <p>R$89,90</p>
-            </span>
-            <button class="button-sign middle">Assine já</button>
-          </div>
-        </article>
-        <article class="col-1_4">
-          <div class="box">
-            <span class="number">150</span>
-            <span class="mega">mega</span>
-            <span class="p-wifi">Wi-fi grátis</span>
-            <span class="price">
-              <p>R$109,90</p>
-            </span>
-            <button class="button-sign">Assine já</button>
-          </div>
-        </article>
-        <article class="col-1_4">
-          <div class="box">
-            <span class="number">200</span>
-            <span class="mega">mega</span>
-            <span class="p-wifi">Wi-fi grátis</span>
-            <span class="price">
-              <p>R$139,90</p>
-            </span>
-            <button class="button-sign">Assine já</button>
-          </div>
-        </article>
-      </div>
-    </section>
-    <section class="main-content">
-      <div class="maxwidth">
-        <h2 class="main-title">A StartNet Fibra</h2>
-        <p class="titlep">
-          Navegue com ultravelocidade de até
-          <span style="color: #ff8314">200</span> mega
-        </p>
-        <article class="main-content-article col-1_2">
-          <span class="icon-download3"></span>
-          <h3 class="main-content-title">Maior desempenho</h3>
-          <p>Baixe arquivos, assista a vídeos<br />em HD e jogue online</p>
-        </article>
-        <article class="main-content-article col-1_2">
-          <span class="icon-cloud-upload"></span>
-          <h3 class="main-content-title">Altas velocidades de upload</h3>
-          <p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
-        </article>
-        <article class="main-content-article col-1_2">
-          <span class="icon-important_devices"></span>
-          <h3 class="main-content-title">Mais estabilidade</h3>
-          <p>Acesse a internet de vários<br />dispositivos ao mesmo tempo.</p>
-        </article>
-        <article class="main-content-article col-1_2">
-          <span class="icon-support_agent"></span>
-          <h3 class="main-content-title">Suporte para novos serviços.</h3>
-          <p>Nosso objetivo é a satisfação<br />de todos.</p>
-        </article>
-      </div>
-    </section>
-    <section id="company-content">
-      <div class="maxwidth">
-        <h2 class="company-title">Sobre nossa empresa!</h2>
-        <div>
-          <article class="content-article">
-            <i class="fas fa-book-open icon"></i>
-            <h3 class="titles">História!</h3>
-            <p class="content-p">
-              Nossa trajetória começou em 2021<br />
-              quando enxergamos a necessidade de um<br />provedor que fornecesse
-              internet com<br />velocidade e estabilidade a um custo<br />acessível
-              para todos
-            </p>
-          </article>
-        </div>
-        <div>
-          <article class="content-article">
-            <i class="fas fa-bullseye icon"></i>
-            <h3 class="titles">Missão</h3>
-            <p class="content-p">
-              Nossa missão é levar a comunicação através da internet com
-              tecnologia de ponta. Expandi-la em todas as áreas<br />inclusive
-              de difícil acesso.
-            </p>
-          </article>
-        </div>
-        <div>
-          <article class="content-article">
-            <i class="far fa-heart icon"></i>
-            <h3 class="titles">Valores</h3>
-            <p class="content-p">
-              Somos um time apaixonados por servir<br />nossos clientes com
-              qualidade e transparência.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <p class="footer-p">Telefone e Whatsapp: +55 11 1111-2222</p>
-      <p class="footer-p">Siga-nos em nossas<br />redes sociais:</p>
-      <nav class="footer-nav">
-        <ul class="ul-icons">
-          <li>
-            <a
-              href="https://www.instagram.com/"
-              target="_blank"
-              class="icon-instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com"
-              target="_blank"
-              class="icon-facebook"
-              ><i class="fab fa-facebook-square"></i
-            ></a>
-          </li>
-        </ul>
-      </nav>
-      <p class="footer-p">Startnet-cnpj: 48.520.165/0003-90</p>
-    </footer>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="./css/modal.css" />
+	<link rel="stylesheet" href="./css/normalize.css" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="icomoon/style.css" />
+	<title>STARTNET</title>
+</head>
 
-    <!-- MODAL -->
-    <dialog id="cepDialog">
-      <div class="content">
-        <span class="closeDialog">&times;</span>
-        <p class="title">STARTNET</p>
-        <p>Verifique a disponibilidade em seu endereço</p>
-        <form method="dialog">
-          <input type="number" id="cep" placeholder="Digite seu CEP" />
-          <span>
-            <a href="http://www.buscacep.correios.com.br/sistemas/buscacep/" target="_blank">
-              Esqueci meu CEP
-            </a>
-          </span>
-          <input type="text" placeholder="Nº da sua residencia" />
-          <button type="submit">Consultar</button>
-        </form>
-      </div>
-    </dialog>
-    <script src="./js/modal.js"></script>
-    <script
-      src="https://kit.fontawesome.com/7c615c2452.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<body>
+	<header class="top-header">
+		<div>
+			<a href="#menu">
+				<img class="logo" src="./assets/logo-menu.png" alt="startnet" /></a>
+		</div>
+		<nav class="top-nav">
+			<ul>
+				<li><a href="#menu">Home</a></li>
+				<li><a href="#menu">Planos</a></li>
+				<li><a href="#menu">A Empresa</a></li>
+				<li><a href="#menu">Central do Assinante</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section class="top-content">
+		<div class="banner">
+			<h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
+		</div>
+	</section>
+	<section id="middle-content">
+		<div class="maxwidth">
+			<h2 class="main-title">Escolha o melhor plano para você</h2>
+			<div class="line"></div>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">20</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$49,90</p>
+					</span>
+					<button class="button-sign">Assine já</button>
+				</div>
+			</article>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">60</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$69,90</p>
+					</span>
+					<button class="button-sign">Assine já</button>
+				</div>
+			</article>
+			<article class="col-1_4">
+				<div class="box-middle">
+					<span class="number">100</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$89,90</p>
+					</span>
+					<button class="button-sign middle">Assine já</button>
+				</div>
+			</article>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">150</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$109,90</p>
+					</span>
+					<button class="button-sign">Assine já</button>
+				</div>
+			</article>
+			<article class="col-1_4">
+				<div class="box">
+					<span class="number">200</span>
+					<span class="mega">mega</span>
+					<span class="p-wifi">Wi-fi grátis</span>
+					<span class="price">
+						<p>R$139,90</p>
+					</span>
+					<button class="button-sign">Assine já</button>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="main-content">
+		<div class="maxwidth">
+			<h2 class="middle-title">A StartNet Fibra</h2>
+			<p class="titlep">
+				Navegue com ultravelocidade de até
+				<span style="color: #ff8314">200</span> mega
+			</p>
+			<article class="main-content-article col-1_2">
+				<span class="icon-download3"></span>
+				<h3 class="main-content-title">Maior desempenho</h3>
+				<p>Baixe arquivos, assista a vídeos<br />em HD e jogue online</p>
+			</article>
+			<article class="main-content-article col-1_2">
+				<span class="icon-cloud-upload"></span>
+				<h3 class="main-content-title">Altas velocidades de upload</h3>
+				<p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
+			</article>
+			<article class="main-content-article col-1_2">
+				<span class="icon-important_devices"></span>
+				<h3 class="main-content-title">Mais estabilidade</h3>
+				<p>Acesse a internet de vários<br />dispositivos ao mesmo tempo.</p>
+			</article>
+			<article class="main-content-article col-1_2">
+				<span class="icon-support_agent"></span>
+				<h3 class="main-content-title">Suporte para novos serviços.</h3>
+				<p>Nosso objetivo é a satisfação<br />de todos.</p>
+			</article>
+		</div>
+	</section>
+	<section id="company-content">
+		<div class="maxwidth">
+			<h2 class="company-title">Sobre nossa empresa!</h2>
+			<div>
+				<article class="content-article col-1_3">
+					<h3 class="titles">História!</h3>
+					<div class="container">
+						<i class="fas fa-book-open icon"></i>
+						<p class="content-p">
+							Nossa trajetória começou em 2021 quando enxergamos a necessidade de um
+							provedor que fornecesse internet com velocidade e estabilidade a um custo acessível
+							para todos
+						</p>
+					</div>
+				</article>
+			</div>
+			<div>
+				<article class="content-article col-1_3"">
+            <h3 class=" titles">Missão</h3>
+					<div class="container">
+						<i class="fas fa-bullseye icon"></i>
+						<p class="content-p">
+							Nossa missão é levar a comunicação através da internet com
+							tecnologia de ponta. Expandi-la em todas as áreas inclusive
+							de difícil acesso.
+						</p>
+					</div>
+				</article>
+			</div>
+			<div>
+				<article class="content-article col-1_3"">
+            		<h3 class=" titles">Valores</h3>
+					<div class="container">
+						<i class="far fa-heart icon"></i>
+						<p class="content-p">
+							Somos um time apaixonados por servir nossos clientes com
+							qualidade e transparência.
+						</p>
+					</div>
+				</article>
+			</div>
+		</div>
+	</section>
+	<footer class="main-footer">
+		<p class="footer-p">Telefone e Whatsapp: +55 11 1111-2222</p>
+		<p class="footer-p">Siga-nos em nossas<br />redes sociais:</p>
+		<nav class="footer-nav">
+			<ul class="ul-icons">
+				<li>
+					<a href="https://www.instagram.com/" target="_blank" class="icon-instagram"><i
+							class="fab fa-instagram"></i></a>
+				</li>
+				<li>
+					<a href="https://www.facebook.com" target="_blank" class="icon-facebook"><i
+							class="fab fa-facebook-square"></i></a>
+				</li>
+			</ul>
+		</nav>
+		<p class="footer-p">Startnet-cnpj: 48.520.165/0003-90</p>
+	</footer>
+
+	<!-- MODAL -->
+	<dialog id="cepDialog">
+		<div class="content">
+			<span class="closeDialog">&times;</span>
+			<p class="title">STARTNET</p>
+			<p>Verifique a disponibilidade em seu endereço</p>
+			<form method="dialog">
+				<input type="number" id="cep" placeholder="Digite seu CEP" />
+				<span>
+					<a href="http://www.buscacep.correios.com.br/sistemas/buscacep/" target="_blank">
+						Esqueci meu CEP
+					</a>
+				</span>
+				<input type="text" placeholder="Nº da sua residencia" />
+				<button type="submit">Consultar</button>
+			</form>
+		</div>
+	</dialog>
+	<script src="./js/modal.js"></script>
+	<script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
