--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -16,16 +16,16 @@
 </head>
 
 <body>
-	<header class="top-header">
+	<header class="top-header" id="home">
 		<div>
 			<a href="#menu">
 				<img class="logo" src="./assets/logo-menu.png" alt="startnet" /></a>
 		</div>
 		<nav class="top-nav">
 			<ul>
-				<li><a href="#menu">Home</a></li>
-				<li><a href="#menu">Planos</a></li>
-				<li><a href="#menu">A Empresa</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#plans">Planos</a></li>
+				<li><a href="#company-content">A Empresa</a></li>
 				<li><a href="#menu">Central do Assinante</a></li>
 			</ul>
 		</nav>
@@ -35,7 +35,7 @@
 			<h1>A fibra que você sempre sonhou agora ao seu alcance</h1>
 		</div>
 	</section>
-	<section id="middle-content">
+	<section class="middle-content" id="plans">
 		<div class="maxwidth">
 			<h2 class="main-title">Escolha o melhor plano para você</h2>
 			<div class="line"></div>
