refactor modal.js

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -204,7 +204,7 @@
 			</form>
 		</div>
 	</dialog>
-	<script src="./js/modal.js"></script>
+	<script src="./js/modal.js" type="module"></script>
 	<script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
 </body>
 </html>
