improve home screen spacements and alignments

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -103,26 +103,37 @@
 				Navegue com ultravelocidade de até
 				<span style="color: #ff8314">200</span> mega
 			</p>
-			<article class="main-content-article col-1_2">
-				<span class="icon-download3"></span>
-				<h3 class="main-content-title">Maior desempenho</h3>
-				<p>Baixe arquivos, assista a vídeos<br />em HD e jogue online</p>
-			</article>
-			<article class="main-content-article col-1_2">
-				<span class="icon-cloud-upload"></span>
-				<h3 class="main-content-title">Altas velocidades de upload</h3>
-				<p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
-			</article>
-			<article class="main-content-article col-1_2">
-				<span class="icon-important_devices"></span>
-				<h3 class="main-content-title">Mais estabilidade</h3>
-				<p>Acesse a internet de vários<br />dispositivos ao mesmo tempo.</p>
-			</article>
-			<article class="main-content-article col-1_2">
-				<span class="icon-support_agent"></span>
-				<h3 class="main-content-title">Suporte para novos serviços.</h3>
-				<p>Nosso objetivo é a satisfação<br />de todos.</p>
-			</article>
+			<div class="col-1_2">
+
+				<article class="main-content-article">
+					<div><span class="icon-download3"></span></div>
+					<div>
+						<h3 class="main-content-title">Maior desempenho</h3>
+						<p>Baixe arquivos, assista a vídeos<br />em HD e jogue online</p>
+					</div>
+				</article>
+				<article class="main-content-article ">
+					<div><span class="icon-cloud-upload"></span></div>
+					<div>
+						<h3 class="main-content-title">Altas velocidades de upload</h3>
+						<p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
+					</div>
+				</article>
+				<article class="main-content-article ">
+					<div><span class="icon-important_devices"></span></div>
+					<div>
+						<h3 class="main-content-title">Mais estabilidade</h3>
+						<p>Acesse a internet de vários<br />dispositivos ao mesmo tempo.</p>
+					</div>
+				</article>
+				<article class="main-content-article ">
+					<div><span class="icon-support_agent"></span></div>
+					<div>
+						<h3 class="main-content-title">Suporte para novos serviços.</h3>
+						<p>Nosso objetivo é a satisfação<br />de todos.</p>
+					</div>
+				</article>
+			</div>
 		</div>
 	</section>
 	<section id="company-content">
