add redirection to new page

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -36,65 +36,64 @@
 		</div>
 	</section>
 	<section class="middle-content" id="plans">
-		<div class="maxwidth">
 			<h2 class="main-title">Escolha o melhor plano para você</h2>
-			<div class="line"></div>
-			<article class="col-1_4">
-				<div class="box">
-					<span class="number">20</span>
-					<span class="mega">mega</span>
-					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price">
-						<p>R$49,90</p>
-					</span>
-          <button class="button-sign" data-plano="20">Assine já</button>
-				</div>
-			</article>
-			<article class="col-1_4">
-				<div class="box">
-					<span class="number">60</span>
-					<span class="mega">mega</span>
-					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price">
-						<p>R$69,90</p>
-					</span>
-					<button class="button-sign">Assine já</button>
-				</div>
-			</article>
-			<article class="col-1_4">
-				<div class="box-middle">
-					<span class="number">100</span>
-					<span class="mega">mega</span>
-					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price">
-						<p>R$89,90</p>
-					</span>
-          <button class="button-sign middle" data-plano="100">Assine já</button>
-				</div>
-			</article>
-			<article class="col-1_4">
-				<div class="box">
-					<span class="number">150</span>
-					<span class="mega">mega</span>
-					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price">
-						<p>R$109,90</p>
-					</span>
-          <button class="button-sign" data-plano="150">Assine já</button>
-				</div>
-			</article>
-			<article class="col-1_4">
-				<div class="box">
-					<span class="number">200</span>
-					<span class="mega">mega</span>
-					<span class="p-wifi">Wi-fi grátis</span>
-					<span class="price">
-						<p>R$139,90</p>
-					</span>
-          <button class="button-sign" data-plano="200">Assine já</button>
-				</div>
-			</article>
-		</div>
+			<div class="col-1_4">
+				<article >
+					<div class="box">
+						<span class="number">20</span>
+						<span class="mega">mega</span>
+						<span class="p-wifi">Wi-fi grátis</span>
+						<span class="price">
+							<p>R$49,90</p>
+						</span>
+			  <button class="button-sign" data-plano="20">Assine já</button>
+					</div>
+				</article>
+				<article>
+					<div class="box">
+						<span class="number">60</span>
+						<span class="mega">mega</span>
+						<span class="p-wifi">Wi-fi grátis</span>
+						<span class="price">
+							<p>R$69,90</p>
+						</span>
+					<button class="button-sign" data-plano="60">Assine já</button>
+					</div>
+				</article>
+				<article>
+					<div class="box-middle">
+						<span class="number">100</span>
+						<span class="mega">mega</span>
+						<span class="p-wifi">Wi-fi grátis</span>
+						<span class="price">
+							<p>R$89,90</p>
+						</span>
+			  <button class="button-sign middle" data-plano="100">Assine já</button>
+					</div>
+				</article>
+				<article>
+					<div class="box">
+						<span class="number">150</span>
+						<span class="mega">mega</span>
+						<span class="p-wifi">Wi-fi grátis</span>
+						<span class="price">
+							<p>R$109,90</p>
+						</span>
+			  <button class="button-sign" data-plano="150">Assine já</button>
+					</div>
+				</article>
+				<article>
+					<div class="box">
+						<span class="number">200</span>
+						<span class="mega">mega</span>
+						<span class="p-wifi">Wi-fi grátis</span>
+						<span class="price">
+							<p>R$139,90</p>
+						</span>
+			  <button class="button-sign" data-plano="200">Assine já</button>
+					</div>
+				</article>
+			</div>
 	</section>
 	<section class="main-content">
 		<div class="maxwidth">
@@ -104,7 +103,6 @@
 				<span style="color: #ff8314">200</span> mega
 			</p>
 			<div class="col-1_2">
-
 				<article class="main-content-article">
 					<div><span class="icon-download3"></span></div>
 					<div>
@@ -112,21 +110,21 @@
 						<p>Baixe arquivos, assista a vídeos<br />em HD e jogue online</p>
 					</div>
 				</article>
-				<article class="main-content-article ">
-					<div><span class="icon-cloud-upload"></span></div>
-					<div>
-						<h3 class="main-content-title">Altas velocidades de upload</h3>
-						<p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
-					</div>
-				</article>
-				<article class="main-content-article ">
+				<article class="main-content-article">
 					<div><span class="icon-important_devices"></span></div>
 					<div>
 						<h3 class="main-content-title">Mais estabilidade</h3>
 						<p>Acesse a internet de vários<br />dispositivos ao mesmo tempo.</p>
 					</div>
 				</article>
-				<article class="main-content-article ">
+				<article class="main-content-article">
+					<div><span class="icon-cloud-upload"></span></div>
+					<div>
+						<h3 class="main-content-title">Altas velocidades de upload</h3>
+						<p>Compartilhe fotos e vídeos<br />com mais rapidez.</p>
+					</div>
+				</article>
+				<article class="main-content-article">
 					<div><span class="icon-support_agent"></span></div>
 					<div>
 						<h3 class="main-content-title">Suporte para novos serviços.</h3>
@@ -166,7 +164,7 @@
 				</article>
 			</div>
 			<div>
-				<article class="content-article col-1_3"">
+				<article class="content-article col-1_3">
             		<h3 class=" titles">Valores</h3>
 					<div class="container">
 						<i class="far fa-heart icon"></i>
@@ -185,12 +183,14 @@
 		<nav class="footer-nav">
 			<ul class="ul-icons">
 				<li>
-					<a href="https://www.instagram.com/" target="_blank" class="icon-instagram"><i
-							class="fab fa-instagram"></i></a>
+					<a href="https://www.instagram.com/" target="_blank" class="icon-instagram">
+						<i class="fab fa-instagram"></i>
+					</a>
 				</li>
 				<li>
-					<a href="https://www.facebook.com" target="_blank" class="icon-facebook"><i
-							class="fab fa-facebook-square"></i></a>
+					<a href="https://www.facebook.com" target="_blank" class="icon-facebook">
+						<i class="fab fa-facebook-square"></i>
+					</a>
 				</li>
 			</ul>
 		</nav>
