some bugs fixed

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -179,7 +179,7 @@
 	</section>
 	<footer class="main-footer">
 		<p class="footer-p">Telefone e Whatsapp: +55 11 1111-2222</p>
-		<p class="footer-p">Siga-nos em nossas<br />redes sociais:</p>
+		<p class="footer-p">Siga-nos em nossas redes sociais:</p>
 		<nav class="footer-nav">
 			<ul class="ul-icons">
 				<li>
