--- a/Front-end/data.html
+++ b/Front-end/data.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="icomoon/style.css" />
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/data.css">
+    <script src="https://kit.fontawesome.com/7c615c2452.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+	<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400&family=Rubik:wght@400;700&display=swap">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"
@@ -99,7 +98,7 @@
     </script>
     <footer class="main-footer">
         <p class="footer-p">Telefone e Whatsapp: +55 11 1111-2222</p>
-        <p class="footer-p">Siga-nos em nossas<br />redes sociais:</p>
+        <p class="footer-p">Siga-nos em nossas redes sociais:</p>
         <nav class="footer-nav">
             <ul class="ul-icons">
                 <li>
